Changed: When no config file is present the input for the second player is set to keyboard 2 (revision 547).
Changed: Bigger sprites in menu level preview in 32-pixels version (revision 542).
Changed: F1 and F2 keys don't switch to fullscreen mode in 32-pixels version since the screen resolution is too low and the graphics cannot be seen completely.
Bug fix: Input field was empty / executable crashed when joystick isn't present the next game start (#2121904, revision 538, revision 539, revision 546).


----------------------------


Version 1.3.1

Released on July 27, 2008

New feature: Level files are also read from the %APPDATA%\Bombermaaan\Levels directory (#1847811) when exe is called with --use-appdata-dir.
Changed: Bombermaaan can be called from any directory now - no more DLL not found message (revision 464).
Changed: Log file and configuration file are placed in %APPDATA%\Bombermaaan directory (#1847811, revision 462, revision 463) when exe is called with --use-appdata-dir.


----------------------------


Version 1.3

Released on May 7, 2008

New feature: Almost unlimited number of levels. You can now add any number of levels. Plus, you don't have to call it L1 or L6 or whatever. Any filename like a.txt or coolbomberlevel.txt will be ok.
New feature: Enhanced level file format. You can specify the amount of items waiting in walls (tracker item #1847047) and the initial bomber skills for every match (tracker item #1847048).
New feature: Animated coin for the winner of a match.
New feature: Larger window/larger sprites available.
New feature: Invisibility as contamination (tracker item #1864528).
New feature: Flameproof as contamination (tracker item #1847833, revision 241).
New feature: Bombs start moving on special blocks (#1908105).
New feature: Mexican wave of the crowd in the victory screen (but the crowd may also be lazy...)
Changed: Accept space bar, numpad enter and return key to go to next screen (only return key worked so far)