@@ -140,26 +140,21 @@ not change the display mode if this one is
 unavailable.
 </pre>
 
-<h2>Additional information</h2>
+<h2>Credits</h2>
 
 <p>
-Bombermaaan is using the FMOD Sound System.<br />
-FMOD Sound System, copyright &copy; Firelight Technologies Pty, Ltd., 1994-2007.
+Bombermaaan is using TinyXML from <a href="https://sourceforge.net/projects/tinyxml">https://sourceforge.net/projects/tinyxml</a>.
 </p>
 
 <p>
-The Bombermaaan project is hosted on <a href="http://sourceforge.net/">SourceForge.net</a>.
+Bombermaaan is using <a href="http://www.doxygen.org/index.html">Doxygen</a> for <a href="http://bombermaaan.sourceforge.net/doxydoc/html/">documentation</a> purposes.
 </p>
+
+<h2>Project host</h2>
+
+The Bombermaaan project is hosted on SourceForge.net. 
 
 <h2>News</h2>
-
-<p>
-May 2008: Released version 1.3.
-</p>
-
-<p>
-December 2007: We're putting the source files into sourceforge.net's subversion repository. This step isn't completed yet, so you won't find all the files there at the moment. Also we are writing a how-to guide you can use if you want to compile Bombermaaan on your own.
-</p>
 
 <p>
 Check <a href="http://bombermaaan.sourceforge.net/">http://bombermaaan.sourceforge.net/</a> for the latest news.
