@@ -22,6 +22,8 @@ must not be misrepresented as being the original software.
 distribution.
 */
 
+#include "STDAFX.H"
+
 #include "tinyxml.h"
 
 // The goal of the seperate error file is to make the first
