@@ -8,6 +8,7 @@ Changed: FMOD was replaced by the SDL_mixer library (by Markus Drescher, revisio
 Changed: When no config file is present the input for the second player is set to keyboard 2 (revision 547).
 Changed: Bigger sprites in menu level preview in 32-pixels version (revision 542).
 Changed: F1 and F2 keys don't switch to fullscreen mode in 32-pixels version since the screen resolution is too low and the graphics cannot be seen completely.
+Changed: Configuration file stored in XML format ##### STILL IN PROGRESS #####
 Bug fix: Input field was empty / executable crashed when joystick isn't present the next game start (#2121904, revision 538, revision 539, revision 546).
 
 
